# py-tg-moder

./: .dockerignore  .editorconfig  .flake8  .gitignore  .isort.cfg  Dockerfile  Makefile  README.md  ROADMAP.md  bot.py  dev-requirements.txt  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  pylint.yml  renovate.json
.github/workflows/: deploy-k8s.yml  docker-publish.yml  pylint.yml  testing.yml
.k8s/: README.md  deployment.yaml  secrets.yaml
config/: __init__.py
src/: bot.py  config.yaml
src/core/: allowlist.py  audit.py  backups.py  cas.py  config.py  duration.py  handlers.py  raid.py  retention.py  s3.py  storage.py
src/handlers/: admin_handlers.py  captcha.py  flood_control.py  helpers.py  info_handlers.py  media_moderation.py  message_moderation.py  service_handlers.py  user_cache.py  user_handlers.py  warn_handlers.py
src/web/: app.py  auth.py  templating.py
src/web/routes/: actions.py  auth_routes.py  dashboard.py  exports.py
src/web/static/: charts.js  style.css
src/web/templates/: _action_result.html  _audit_table.html  _compaction_preview.html  admin.html  audit.html  base.html  chat.html  login.html  overview.html  user.html
tests/: conftest.py  test_admin_permissions.py  test_admin_targets.py  test_allowlist.py  test_audit.py  test_backups.py  test_ban_delete.py  test_captcha.py  test_cas.py  test_command_feedback.py  test_duration.py  test_fake.py  test_flood_control.py  test_helpers.py  test_info_handlers.py  test_media_moderation.py  test_message_moderation.py  test_raid.py  test_retention.py  test_s3.py  test_service_handlers.py  test_storage.py  test_target_resolution.py  test_temporary_punishments.py  test_user_cache.py  test_user_handlers.py  test_warn_handlers.py  test_web_actions.py  test_web_app.py  test_web_auth.py  test_web_exports.py
