[project]
name = "py-tg-moder"
version = "0.2.0"
description = "Simple bot for moderate my chat"
authors = [{ name = "Mikhail Savin", email = "jtprogru@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "python-telegram-bot>=22.0",
  "requests>=2.32",
  "ruamel.yaml>=0.18",
  "sentry-sdk>=2",
]

[project.urls]
Homepage = "https://github.com/jtprogru/py-tg-moder"
Repository = "https://github.com/jtprogru/py-tg-moder"
Documentation = "https://github.com/jtprogru/py-tg-moder/wiki"

[dependency-groups]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-env>=1",
  "black>=24",
  "flake8>=7",
  "isort>=5",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = "test*.py"
norecursedirs = [".git", ".tox", "venv*", ".venv", "requirements*"]
addopts = '''
  --verbose
  --strict-markers
  --color=yes
  --tb=short
'''
testpaths = ["tests"]
env = ["DEBUG=True", "TELEGRAM_BOT_TOKEN='12345:xxxx'"]

[tool.black]
line-length = 160
target-version = ['py313']
skip-string-normalization = true
include = '\.pyi?$'
extend-exclude = '''
/(
  | migrations
  | venv
  | .venv
)/
'''
