[project]
name = "py-tg-moder"
version = "0.2.0"
description = "Simple bot for moderate my chat"
authors = [{ name = "Mikhail Savin", email = "jtprogru@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "itsdangerous>=2.2",
  "jinja2>=3.1",
  "python-telegram-bot>=22.0",
  "requests>=2.32",
  "ruamel.yaml>=0.18",
  "sentry-sdk>=2",
  "uvicorn>=0.34",
]

[project.urls]
Homepage = "https://github.com/jtprogru/py-tg-moder"
Repository = "https://github.com/jtprogru/py-tg-moder"
Documentation = "https://github.com/jtprogru/py-tg-moder/wiki"

[dependency-groups]
dev = [
  "httpx2>=0.1",
  "pytest>=8",
  "pytest-cov>=5",
  "pytest-env>=1",
  "ruff>=0.10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
python_files = "test*.py"
norecursedirs = [".git", ".tox", "venv*", ".venv", "requirements*"]
addopts = '''
  --verbose
  --strict-markers
  --color=yes
  --tb=short
'''
testpaths = ["tests"]
env = ["DEBUG=True", "TELEGRAM_BOT_TOKEN='12345:xxxx'"]

[tool.ruff]
line-length = 160
target-version = "py314"
extend-exclude = ["migrations", "venv", ".venv"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort
select = ["E", "F", "I", "W"]
# E501 (line length) is enforced by the formatter via line-length above.
ignore = ["E501"]

[tool.ruff.format]
# Preserve the previous black "skip-string-normalization" behaviour.
quote-style = "preserve"
